Fixed bug with nav link animation delaying too much. Also fixed spacing issue with buttons on home page

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -88,6 +88,7 @@
   @include respond-to("small") {
     width: 100px;
     font-size: 1.8rem;
+    top: 2rem;
   }
 }
 
