--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -80,13 +80,13 @@
   }
 }
 #nav__link-projects {
-  animation-delay: 0.05s;
+  animation-delay: 0.025s;
 }
 #nav__link-resume {
-  animation-delay: 0.075s;
+  animation-delay: 0.05s;
 }
 #nav__link-contact {
-  animation-delay: 0.1s;
+  animation-delay: 0.075s;
 }
 
 .nav__link--scrolled {
